--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 button{
   width: 100px;
   height: 50px;
-  margin-left: 20px;
+  margin-left: 100px;
   background-color: aqua;
   border-radius: 8px;
 }
@@ -11,8 +11,29 @@ p{
   margin-top: 50px;
 }
 .butt1{
-  margin-left: 30px;
+  margin-left: 400px;
 }
 body{
   background-color: gray;
+}
+
+@media screen and (max-width:900px){
+  button{
+    width: 100px;
+    height: 50px;
+    margin-left: 20px;
+    background-color: aqua;
+    border-radius: 8px;
+  }
+  p{
+    text-align: center;
+    padding-bottom: 50px;
+    margin-top: 50px;
+  }
+  .butt1{
+    margin-left: 30px;
+  }
+  body{
+    background-color: gray;
+  }
 }
