--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,21 @@
 button{
   width: 100px;
   height: 50px;
-  margin-left: 100px;
   background-color: aqua;
   border-radius: 8px;
+  margin-left: 50px;
 }
+
+#para{
+  margin: auto;
+}
+
 p{
   text-align: center;
   padding-bottom: 50px;
   margin-top: 50px;
 }
-.butt1{
-  margin-left: 400px;
-}
+
 body{
   background-color: gray;
 }
@@ -30,9 +33,11 @@ body{
     padding-bottom: 50px;
     margin-top: 50px;
   }
-  .butt1{
-    margin-left: 30px;
+
+  #para{
+    margin: auto;
   }
+  
   body{
     background-color: gray;
   }
